# ats2-xprelude

./: Makefile.am  Makefile.in  README  aclocal.m4  aminclude_static.am  ats2-xprelude-macros.m4.in  ats2-xprelude.pc.in  autogen.sh  bisection_iterator-support.dats.m4  common-macros.m4.in  config.h.in  configure  configure.ac  exrat-implementations.dats.m4  exrat-support.dats  exrat-support.dats.m4  fixed32p32-implementations.dats.m4  fixed32p32_division.c  fixed32p32_division.c.m4  fixed32p32_multiplication.c  fixed32p32_multiplication.c.m4  fixed32p32_square_root.dats  fixed32p32_square_root.dats.m4  float-implementations.dats.m4  float-strto.c.m4  gmp-support.dats.m4  integer-implementations.dats.m4  ipow.c.m4  ipow.dats.m4  mpfr-implementations.dats.m4  mpfr-support.dats.m4  pats_ccomp_exception.h.array  strfrom-support.dats.m4  strto-support.dats.m4  tostrptr_fixed32p32.dats  tostrptr_fixed32p32.dats.m4  validate_strfrom_format.dats.m4
lib/: Makefile.am  Makefile.in
m4/: gnulib-cache.m4  gnulib-comp.m4
maintainer-extras/: find-numbers.c
tests/: test-bisection_iterator.dats  test-exrat.dats  test-fixed32p32.dats  test-float.dats  test-float128.dats  test-integer.dats  test-mpfr.dats  test-sort.dats
xprelude/CATS/: attributes.cats.m4  exrat.cats  exrat.cats.m4  fixed32p32.cats  fixed32p32.cats.m4  float.cats.m4  integer.cats.m4  mpfr.cats.m4
xprelude/DATS/: arith_prf.dats.m4  bisection_iterator.dats.m4  exrat.dats  exrat.dats.m4  fixed32p32.dats  fixed32p32.dats.m4  float.dats.m4  integer.dats.m4  mpfr.dats.m4  sort.dats.m4
xprelude/HATS/: sort.hats.m4  sort_dats.hats.m4  sort_sats.hats.m4  symbols.hats.m4  xprelude.hats  xprelude.hats.m4  xprelude_dats.hats  xprelude_dats.hats.m4  xprelude_sats.hats  xprelude_sats.hats.m4
xprelude/SATS/: arith_prf.sats.m4  bisection_iterator.sats.m4  exrat.sats  exrat.sats.m4  fixed32p32.sats  fixed32p32.sats.m4  float.sats.m4  integer.sats.m4  mpfr.sats.m4  sort.sats.m4
